kubernetes-manifests/terraform-applier/tf-applier-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: terraform-applier
spec:
  template:
    metadata:
      labels:
        app: terraform-applier
    spec:
      serviceAccountName: terraform-applier
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 300
      containers:
        - name: tf-applier
          imagePullPolicy: Always
          args:
            - --disable-pr-planner
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: metrics
              containerPort: 8081
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config/
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsUser: 1000
            runAsNonRoot: true
      volumes:
        - name: config
          configMap:
            name: tf-applier-config
  volumeClaimTemplates:
    - metadata:
        name: tmp
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 20Gi
        storageClassName: nfs-client
