kubernetes-manifests/terraform-applier/tf-applier-redis-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: terraform-applier-redis
spec:
  template:
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: redis
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsUser: 1000
            runAsNonRoot: true
  volumeClaimTemplates:
  - metadata:
      name: terraform-applier-redis-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
      storageClassName: nfs-client
