kubernetes-manifests/terraform-applier/tf-applier-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: terraform-applier
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: http
      targetPort: http
  selector:
    app: terraform-applier
