kubernetes-manifests/terraform-applier/tf-applier-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: terraform-applier
  annotations:
    external-dns.alpha.kubernetes.io/target: private-ingress.dtlp.cc
spec:
  rules:
    - host: terraform-applier.dtlp.cc
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: terraform-applier
spec:
  entryPoints:
    - web-secure
  routes:
    - kind: Rule
      match: Host(`terraform-applier.dtlp.cc`)
      services:
        - name: terraform-applier
          kind: Service
          port: 8080
          sticky:
            cookie: {}
  tls: {}
